--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     <div class="timeline-dot"></div>
                     <div class="timeline-date">dezembro de 2022 - setembro de 2024 </div>
                     <h3>Pós-graduação, Análise de Dados </h3>
-                    <h4>Descomplica </h4>
+                    <h4>Descomplica </h3>
                 </div>
                 <div class="timeline-item" data-aos="fade-left" data-aos-delay="100">
                     <div class="timeline-dot"></div>
@@ -339,6 +339,7 @@
     <footer class="footer">
         <div class="container">
             <p>&copy; 2025 Luís Silva. Todos os direitos reservados.</p>
+            <p><a href="assets/docs/Luis_Silva_Curriculo.pdf" target="_blank" class="footer-link">Download Currículo</a></p>
         </div>
     </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
