--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luís Silva | Data Analyst Portfolio</title>
+    <title>Luís Silva | Portfolio</title>
     <meta name="description" content="Portfólio de Luís Silva, Analista de Dados com expertise em Python, Power BI, SQL e desenvolvimento de soluções baseadas em dados e automação.">
     <link rel="icon" href="assets/img/favicon.png" type="image/png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
