--- a/portfolios/data-analysis/index.html
+++ b/portfolios/data-analysis/index.html
@@ -1,71 +1,60 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Luís Silva - Power BI Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="./powerbi-assets/powerbi-css/powerbi-style.css" />
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Luís Silva | Portfólio de Análise de Dados</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  <div class="container">
-    <aside class="sidebar">
-      <img src="./powerbi-assets/powerbi-images/powerbi-luis.png" alt="Luís Silva" />
-      <h1>Luís Silva</h1>
-      <p>Analista de Dados Power BI</p>
-      <ul>
-        <li><ion-icon name="logo-linkedin"></ion-icon><a href="https://linkedin.com/in/luissilvak" target="_blank">LinkedIn</a></li>
-        <li><ion-icon name="logo-github"></ion-icon><a href="https://github.com/LuiSilvak" target="_blank">Repositórios</a></li>
-        <li><ion-icon name="location-outline"></ion-icon>São Luís - MA</li>
-      </ul>
-    </aside>
+    <div class="portfolio-container">
+        <aside class="sidebar">
+            <a href="../../index.html" class="back-button">&larr; Voltar ao Início</a>
+            <div class="profile">
+                <img src="../../assets/img/luis-silva-perfil.png" alt="Foto de Luís Silva" class="profile-photo">
+                <h1>Luís Silva</h1>
+                <p>Análise de Dados</p>
+            </div>
+            <nav class="sidebar-nav">
+                <a href="https://www.linkedin.com/in/luissilvak" target="_blank">LinkedIn</a>
+                <a href="https://github.com/LuiSilvak" target="_blank">GitHub</a>
+            </nav>
+        </aside>
 
-    <main class="main">
-      <div class="top-header">
-        <h2>Projetos Power BI</h2>
-        <p>Confira abaixo os projetos organizados por nível de complexidade:</p>
-      </div>
+        <main class="main-content">
+            <header class="main-header">
+                <h2>Portfólio de Análise de Dados</h2>
+                <p>Projetos envolvendo Business Intelligence, automação com Python, ETL e visualização de dados para gerar insights de negócio.</p>
+            </header>
 
-      <div class="top-bar">
-        <div class="tabs">
-          <button class="tab active" data-nivel="todos">🔷 Todos</button>
-          <button class="tab" data-nivel="iniciante">✅ Iniciante</button>
-          <button class="tab" data-nivel="intermediario">📊 Intermediário</button>
-          <button class="tab" data-nivel="avancado">🧠 Avançado</button>
-        </div>
-        <h3 class="destaques-titulo">✨ Destaques</h3>
-      </div>
+            <div class="controls">
+                <div class="filters">
+                    <button class="filter-btn active" data-filter="todos">Todos</button>
+                    <button class="filter-btn" data-filter="Power BI">Power BI</button>
+                    <button class="filter-btn" data-filter="Python">Python</button>
+                    <button class="filter-btn" data-filter="SQL">SQL</button>
+                </div>
+                <input type="text" id="searchInput" placeholder="Pesquisar projeto...">
+            </div>
 
-      <div class="top-right-buttons">
-        <button id="modoBtn">🌙 Modo Claro/Escuro</button>
-        <button id="langToggleBtn">🌐 English</button>
-      </div>
-
-      <input type="text" id="searchInput" placeholder="🔍 Pesquisar projeto..." />
-
-      <section id="destaques">
-        <h2 style="display: none;">✨ Destaques</h2>
-        <div class="card-grid destaques-grid"></div>
-      </section>
-
-      <section class="card-grid"></section>
-    </main>
-  </div>
-
-  <!-- Modal para exibir Power BI -->
-  <div id="powerbiModal" class="modal">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <h3 id="modalTitulo"></h3>
-      <p id="modalDescricao"></p>
-      <iframe id="powerbiIframe" width="100%" height="500" frameborder="0" allowfullscreen></iframe>
-      <a id="powerbiLink" class="powerbi-link" href="#" target="_blank">Abrir no Power BI Online ↗</a>
+            <section id="projects-grid" class="projects-grid">
+                </section>
+        </main>
     </div>
-  </div>
 
-  <!-- Scripts -->
-  <script type="module" src="./powerbi-assets/powerbi-js/powerbi-script.js"></script>
+    <div id="projectModal" class="modal">
+        <div class="modal-content">
+            <span class="close-button">&times;</span>
+            <h3 id="modalTitle"></h3>
+            <p id="modalDescription"></p>
+            <div class="modal-body">
+                </div>
+            <div id="modalLinks" class="modal-links">
+                </div>
+        </div>
+    </div>
+
+    <script type="module" src="./js/script.js"></script>
 </body>
 </html>
