--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
             <div class="container">
                 <h2 class="section-title">Habilidades</h2>
                 <div class="skills-grid">
+                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="300">
+                        <i class="fas fa-chart-bar"></i>
+                        <h3>Análise e Engenharia de Dados</h3>
+                        <ul>
+                            <li>Power BI (DAX, Power Query)</li>
+                            <li>SQL (Bancos de Dados)</li>
+                            <li>Pandas (Análise e ETL)</li>
+                            <li>Modelagem de Dados</li>
+                            <li>Visualização de Dados</li>
+                        </ul>
+                    </div>
                     <div class="skill-item" data-aos="zoom-in" data-aos-delay="100">
                         <i class="fas fa-code"></i>
                         <h3>Desenvolvimento Front-End</h3>
@@ -84,35 +95,46 @@
                     </div>
                     <div class="skill-item" data-aos="zoom-in" data-aos-delay="200">
                         <i class="fas fa-database"></i>
-                        <h3>Back-End & Análise de Dados</h3>
+                        <h3>Desenvolvimento Back-End</h3>
                         <ul>
-                            <li>Python & Pandas</li>
-                            <li>SQL (PostgreSQL, MySQL)</li>
-                            <li>Power BI (DAX, Power Query)</li>
-                            <li>PHP & Laravel</li>
+                            <li>Python & Django</li>
+                            <li>Criação de APIs REST</li>
                             <li>Node.js (Básico)</li>
-                        </ul>
-                    </div>
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="300">
-                        <i class="fas fa-cogs"></i>
-                        <h3>Engenharia Mecânica</h3>
-                        <ul>
-                            <li>SolidWorks</li>
-                            <li>AutoCAD & Inventor</li>
-                            <li>Simulação FEA (ANSYS)</li>
-                            <li>Desenho Técnico</li>
-                            <li>MATLAB</li>
+                            <li>Automação de Processos</li>
+                            <li>Scripts (Python, Bash)</li>
                         </ul>
                     </div>
                     <div class="skill-item" data-aos="zoom-in" data-aos-delay="400">
                         <i class="fas fa-server"></i>
                         <h3>Infraestrutura & Plataformas</h3>
                         <ul>
-                            <li>Git & GitHub</li>
-                            <li>CI/CD (Básico)</li>
                             <li>Gestão de Servidores (Linux)</li>
-                            <li>Desenvolvimento e Admin. Moodle</li>
+                            <li>Containerização com Docker</li>
+                            <li>Desenv. e Admin. Moodle</li>
+                            <li>WordPress</li>
                             <li>Suporte e Administração de TI</li>
+                        </ul>
+                    </div>
+                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="600">
+                        <i class="fas fa-tools"></i>
+                        <h3>Ferramentas & Metodologias</h3>
+                        <ul>
+                            <li>Git & GitHub</li>
+                            <li>CI/CD</li>
+                            <li>Metodologias Ágeis</li>
+                            <li>Jira & Trello</li> 
+                            <li>Testes Automatizados</li>
+                        </ul>
+                    </div>
+                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="300">
+                        <i class="fas fa-cogs"></i>
+                        <h3>Engenharia Mecânica / Projetos Mecânicos</h3>
+                        <ul>
+                            <li>SolidWorks</li>
+                            <li>AutoCAD & Inventor</li>
+                            <li>Simulação FEA (ANSYS)</li>
+                            <li>Desenho Técnico</li>
+                            <li>MATLAB</li>
                         </ul>
                     </div>
                 </div>
@@ -135,12 +157,30 @@
                             </div>
                         </div>
                     </a>
-                    <a href="portfolios/it-support/" target="_blank" class="project-card-link" data-aos="fade-up" data-aos-delay="100">
+                    <a href="portfolios/data-engineering/" target="_blank" class="project-card-link" data-aos="fade-up" data-aos-delay="200">
                         <div class="project-card">
-                            <i class="fas fa-headset project-icon"></i>
+                            <i class="fas fa-project-diagram project-icon"></i>
                             <div class="project-content">
-                                <h3>Técnico em Informática</h3>
-                                <p>Manutenção, otimização de redes e automação de rotinas. Soluções em suporte técnico e gestão de infraestrutura de TI.</p>
+                                <h3>Engenharia de Dados</h3>
+                                <p>Construção de pipelines de ETL, modelagem de dados e otimização de bancos de dados para garantir a qualidade e o fluxo da informação.</p>
+                            </div>
+                        </div>
+                    </a>
+                     <a href="portfolios/analytics-engineering/" target="_blank" class="project-card-link" data-aos="fade-up" data-aos-delay="200">
+                        <div class="project-card">
+                            <i class="fas fa-layer-group project-icon"></i>
+                            <div class="project-content">
+                                <h3>Engenharia Analítica</h3>
+                                <p>Criação de modelos de dados robustos e confiáveis, focados em qualidade, testes e governança para suportar a análise de negócio.</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="portfolios/data-science/" target="_blank" class="project-card-link" data-aos="fade-up" data-aos-delay="300">
+                        <div class="project-card">
+                            <i class="fas fa-brain project-icon"></i>
+                            <div class="project-content">
+                                <h3>Ciência de Dados</h3>
+                                <p>Análise exploratória, criação de modelos preditivos e aplicação de machine learning para resolver problemas de negócio complexos.</p>
                             </div>
                         </div>
                     </a>
@@ -150,6 +190,33 @@
                             <div class="project-content">
                                 <h3>Desenvolvimento Front-End</h3>
                                 <p>Criação de interfaces de usuário interativas e responsivas. Projetos com foco em Vue.js, HTML5, CSS3 e consumo de APIs.</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="portfolios/backend/" target="_blank" class="project-card-link" data-aos="fade-up" data-aos-delay="500">
+                        <div class="project-card">
+                            <i class="fas fa-server project-icon"></i>
+                            <div class="project-content">
+                                <h3>Desenvolvimento Back-End</h3>
+                                <p>Construção da lógica de servidor e APIs RESTful com Python, Django e frameworks modernos para aplicações web.</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="portfolios/automation/" target="_blank" class="project-card-link" data-aos="fade-up" data-aos-delay="600">
+                        <div class="project-card">
+                            <i class="fas fa-robot project-icon"></i>
+                            <div class="project-content">
+                                <h3>Automação de Processos</h3>
+                                <p>Criação de scripts e robôs (RPA) com Python para automatizar tarefas repetitivas, web scraping e geração de relatórios.</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="portfolios/it-support/" target="_blank" class="project-card-link" data-aos="fade-up" data-aos-delay="100">
+                        <div class="project-card">
+                            <i class="fas fa-headset project-icon"></i>
+                            <div class="project-content">
+                                <h3>Técnico em Informática</h3>
+                                <p>Manutenção, otimização de redes e automação de rotinas. Soluções em suporte técnico e gestão de infraestrutura de TI.</p>
                             </div>
                         </div>
                     </a>
@@ -170,33 +237,53 @@
             <div class="container">
                 <h2 class="section-title">Experiência</h2>
                 <div class="timeline">
-                     <div class="timeline-item" data-aos="fade-right">
+                    <div class="timeline-item" data-aos="fade-right">
                         <div class="timeline-dot"></div>
-                        <div class="timeline-date">julho de 2022 - Presente</div>
+                        <div class="timeline-date">outubro de 2025 - Presente</div>
+                        <h3>Desenvolvedor de Software</h3>
+                        <h4>CRP Tecnologia</h4>
+                        <p>
+                            Atuo no desenvolvimento full-stack de aplicações web, com foco na construção de back-ends robustos utilizando <strong>Python e Django</strong> para criar APIs RESTful eficientes. No front-end, implemento interfaces de usuário reativas e modernas com <strong>Vue.js</strong>. Além disso, crio scripts de <strong>automação de processos</strong> em Python para otimizar rotinas internas e extração de dados.
+                        </p>
+                    </div>
+                     <div class="timeline-item" data-aos="fade-left">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-date">julho de 2022 - setembro de 2025 (3 anos e 3 meses)</div>
                         <h3>Programador Júnior</h3>
                         <h4>PD Case Informática Ltda</h4>
-                        <p>Atuação no desenvolvimento e manutenção de sistemas, com foco em tecnologias web modernas e boas práticas de programação.</p>
+                        <p>
+                            Fiz parte do time de desenvolvimento, atuando no ciclo completo de manutenção e evolução de sistemas web. Minhas responsabilidades incluíam a correção de bugs, implementação de novas funcionalidades e otimização da performance de aplicações, utilizando tecnologias como <strong>JavaScript, PHP e SQL</strong>, sempre seguindo boas práticas de programação e versionamento com Git.
+                        </p>
                     </div>
-                    <div class="timeline-item" data-aos="fade-left" data-aos-delay="100">
+                    <div class="timeline-item" data-aos="fade-right" data-aos-delay="100">
                         <div class="timeline-dot"></div>
                         <div class="timeline-date">setembro de 2021 - agosto de 2022 (1 ano)</div>
                         <h3>Estagiário Técnico de T.I</h3>
                         <h4>Tribunal de Contas do Estado do Maranhão</h4>
-                        <p>Desenvolvimento e manutenção de sistemas (PHP, WordPress, Moodle), análise e otimização de dados com SQL, VBA e criação de dashboards em Power BI para insights processuais. Automação de rotinas com Shell, Python e PowerShell.</p>
+                        <p>
+                            Contribuí em múltiplas frentes de TI, incluindo:
+                            <br>• **Análise de Dados:** Criação de dashboards interativos em <strong>Power BI</strong> e otimização de bases de dados com <strong>SQL e VBA</strong> para gerar insights sobre processos internos.
+                            <br>• **Desenvolvimento:** Manutenção de sistemas web em <strong>PHP, WordPress e Moodle</strong>.
+                            <br>• **Automação:** Desenvolvimento de scripts com <strong>Shell, Python e PowerShell</strong> para automatizar rotinas e processos de infraestrutura.
+                        </p>
                     </div>
-                    <div class="timeline-item" data-aos="fade-right" data-aos-delay="200">
+                    <div class="timeline-item" data-aos="fade-left" data-aos-delay="200">
                         <div class="timeline-dot"></div>
                         <div class="timeline-date">novembro de 2012 - agosto de 2021 (8 anos 10 meses)</div>
                         <h3>Técnico de TI (Autônomo)</h3>
                         <h4>Autônomo</h4>
-                        <p>Suporte e manutenção em hardware e software. Automação de processos e desenvolvimento de ferramentas com Python e VBA. Consultoria estratégica em TI, segurança digital e treinamentos em Excel e Power BI.</p>
+                        <p>
+                            Prestei serviços abrangentes de TI para clientes diversos, com foco em suporte, automação e consultoria. Desenvolvi ferramentas customizadas com <strong>Python e VBA</strong> para automatizar extração de dados e geração de relatórios. Realizei manutenção de hardware/software, otimização de desempenho e ofereci treinamentos em ferramentas como <strong>Excel e Power BI</strong>.
+                        </p>
                     </div>
-                    <div class="timeline-item" data-aos="fade-left" data-aos-delay="300">
+                    <div class="timeline-item" data-aos="fade-right" data-aos-delay="300">
                         <div class="timeline-dot"></div>
                         <div class="timeline-date">janeiro de 2018 - dezembro de 2018 (1 ano)</div>
                         <h3>Estagiário de Engenharia/TI</h3>
                         <h4>Universidade Estadual do Maranhão</h4>
-                        <p>Proficiência em softwares CAD (AutoCAD, Inventor, SolidWorks) para modelagem e detalhamento mecânico. Análise e visualização de dados com Excel e Power BI. Utilização de MATLAB para cálculos e simulações.</p>
+                        <p>
+                            Atuei em uma função híbrida, aplicando conhecimentos de engenharia e TI. Fui responsável pela modelagem e detalhamento de projetos mecânicos utilizando softwares CAD como <strong>AutoCAD e SolidWorks</strong>. Simultaneamente, apliquei habilidades de análise de dados com <strong>Excel e Power BI</strong> para interpretar resultados de simulações e otimizar projetos.
+                        </p>
                     </div>
                 </div>
             </div>
