--- a/index.html
+++ b/index.html
@@ -235,54 +235,86 @@
 
         <section id="experience" class="section experience">
             <div class="container">
-                <h2 class="section-title">Experiência</h2>
+                <h2 class="section-title">Experiência Profissional</h2>
                 <div class="timeline">
+
                     <div class="timeline-item" data-aos="fade-right">
                         <div class="timeline-dot"></div>
                         <div class="timeline-date">outubro de 2025 - Presente</div>
                         <h3>Desenvolvedor de Software</h3>
-                        <h4>CRP Tecnologia</h4>
+                        <h4>CRP Tecnologia (Alocado no Tribunal de Contas do Maranhão)</h4>
                         <p>
-                            Atuo no desenvolvimento full-stack de aplicações web, com foco na construção de back-ends robustos utilizando <strong>Python e Django</strong> para criar APIs RESTful eficientes. No front-end, implemento interfaces de usuário reativas e modernas com <strong>Vue.js</strong>. Além disso, crio scripts de <strong>automação de processos</strong> em Python para otimizar rotinas internas e extração de dados.
+                            Atuando como desenvolvedor full-stack focado na modernização e criação de novos sistemas para a Escola Superior de Controle Externo do Tribunal de Contas (TCE-MA). Minhas responsabilidades incluem:
+                            <br>• <strong>Desenvolvimento Back-End:</strong> Projeto e implementação de APIs RESTful robustas com <strong>Python e Django</strong>, servindo como a espinha dorsal para os novos sistemas de controle externo e auditoria.
+                            <br>• <strong>Desenvolvimento Front-End:</strong> Construção de interfaces de usuário ricas e reativas com <strong>Vue.js</strong>, focando na criação de dashboards analíticos e formulários complexos para os servidores do Tribunal.
+                            <br>• <strong>Automação e Dados:</strong> Desenvolvimento de scripts em <strong>Python</strong> para automatizar tarefas de ETL, migração de dados de sistemas legados e geração de relatórios, garantindo a integridade e a eficiência no manuseio de dados governamentais.
                         </p>
                     </div>
-                     <div class="timeline-item" data-aos="fade-left">
+
+                    <div class="timeline-item" data-aos="fade-left">
                         <div class="timeline-dot"></div>
                         <div class="timeline-date">julho de 2022 - setembro de 2025 (3 anos e 3 meses)</div>
                         <h3>Programador Júnior</h3>
-                        <h4>PD Case Informática Ltda</h4>
+                        <h4>PD Case Informática Ltda (Alocado no Tribunal de Contas do Maranhão)</h4>
                         <p>
-                            Fiz parte do time de desenvolvimento, atuando no ciclo completo de manutenção e evolução de sistemas web. Minhas responsabilidades incluíam a correção de bugs, implementação de novas funcionalidades e otimização da performance de aplicações, utilizando tecnologias como <strong>JavaScript, PHP e SQL</strong>, sempre seguindo boas práticas de programação e versionamento com Git.
+                            Como parte da equipe de sustentação de sistemas da Escola Superior de Controle Externo (ESCEX) do TCE-MA, fui responsável por garantir a estabilidade e a evolução de aplicações críticas para o funcionamento do órgão. Minhas atividades principais eram:
+                            <br>• <strong>Manutenção Corretiva e Evolutiva:</strong> Diagnostiquei e resolvi bugs em sistemas de controle de processos e gestão de pessoal, desenvolvidos em <strong>PHP, JavaScript e SQL</strong>. Implementei novas funcionalidades conforme as demandas das diretorias do Tribunal, melhorando a usabilidade e a performance.
+                            <br>• <strong>Análise de Requisitos:</strong> Participei ativamente no levantamento de requisitos junto aos usuários finais (servidores do Tribunal) para traduzir necessidades de negócio em especificações técnicas claras para o desenvolvimento.
+                            <br>• <strong>Otimização de Banco de Dados:</strong> Analisei e otimizei queries <strong>SQL</strong> complexas para melhorar o tempo de resposta de relatórios e telas do sistema, impactando diretamente na produtividade dos usuários.
                         </p>
                     </div>
+
                     <div class="timeline-item" data-aos="fade-right" data-aos-delay="100">
                         <div class="timeline-dot"></div>
                         <div class="timeline-date">setembro de 2021 - agosto de 2022 (1 ano)</div>
                         <h3>Estagiário Técnico de T.I</h3>
                         <h4>Tribunal de Contas do Estado do Maranhão</h4>
                         <p>
-                            Contribuí em múltiplas frentes de TI, incluindo:
-                            <br>• **Análise de Dados:** Criação de dashboards interativos em <strong>Power BI</strong> e otimização de bases de dados com <strong>SQL e VBA</strong> para gerar insights sobre processos internos.
-                            <br>• **Desenvolvimento:** Manutenção de sistemas web em <strong>PHP, WordPress e Moodle</strong>.
-                            <br>• **Automação:** Desenvolvimento de scripts com <strong>Shell, Python e PowerShell</strong> para automatizar rotinas e processos de infraestrutura.
+                            Atuei em um papel multidisciplinar, apoiando diversas frentes de tecnologia:
+                            <br>• <strong>Análise de Dados:</strong> Desenvolvi dashboards interativos em <strong>Power BI</strong>, transformando dados brutos de sistemas internos em KPIs acionáveis para a gestão. Otimizei consultas e manipulei dados com <strong>SQL e VBA</strong>.
+                            <br>• <strong>Desenvolvimento Web:</strong> Prestei manutenção e implementei melhorias em plataformas de EAD (<strong>Moodle</strong>) e portais institucionais (<strong>WordPress</strong>).
+                            <br>• <strong>Infraestrutura e Automação:</strong> Criei scripts em <strong>Shell e Python</strong> para automatizar a extração de logs e a verificação de serviços em servidores Linux.
                         </p>
                     </div>
+
                     <div class="timeline-item" data-aos="fade-left" data-aos-delay="200">
                         <div class="timeline-dot"></div>
                         <div class="timeline-date">novembro de 2012 - agosto de 2021 (8 anos 10 meses)</div>
-                        <h3>Técnico de TI (Autônomo)</h3>
+                        <h3>Consultor de TI & Desenvolvedor de Automação (Autônomo)</h3>
                         <h4>Autônomo</h4>
                         <p>
-                            Prestei serviços abrangentes de TI para clientes diversos, com foco em suporte, automação e consultoria. Desenvolvi ferramentas customizadas com <strong>Python e VBA</strong> para automatizar extração de dados e geração de relatórios. Realizei manutenção de hardware/software, otimização de desempenho e ofereci treinamentos em ferramentas como <strong>Excel e Power BI</strong>.
+                            Como consultor independente, atuei como um parceiro estratégico para pequenas e médias empresas, diagnosticando GAPs operacionais e desenvolvendo soluções tecnológicas sob medida para aumentar a eficiência e a inteligência de negócio. Minha atuação era dividida em três pilares principais:
+                            <br>
+                            <br>• <strong>Desenvolvimento & Automação de Processos:</strong>
+                            <br>  - Criei ferramentas e scripts customizados em <strong>Python (com Pandas) e VBA</strong> para automatizar processos de ETL (Extração, Transformação e Carga), reduzindo o tempo de processamento manual de relatórios em até 80% para diversos clientes.
+                            <br>  - Desenvolvi soluções de web scraping para coleta de dados de mercado, alimentando bases de dados internas e permitindo análises competitivas.
+                            <br>
+                            <br>• <strong>Infraestrutura & Suporte Técnico Estratégico:</strong>
+                            <br>  - Realizei a gestão completa de infraestrutura de TI, incluindo a configuração e manutenção de servidores locais, gestão de redes e implementação de políticas de segurança e backup para recuperação de desastres.
+                            <br>  - Prestei suporte técnico especializado (Nível 1 a 3), atuando como o ponto central de TI para os clientes, garantindo a continuidade e a segurança de suas operações.
+                            <br>
+                            <br>• <strong>Capacitação & Business Intelligence:</strong>
+                            <br>  - Ministrei treinamentos personalizados em <strong>Excel Avançado e Power BI</strong>, transformando equipes com pouca familiaridade com dados em usuários capazes de criar seus próprios dashboards e análises, fomentando uma cultura data-driven.
                         </p>
                     </div>
+
                     <div class="timeline-item" data-aos="fade-right" data-aos-delay="300">
                         <div class="timeline-dot"></div>
                         <div class="timeline-date">janeiro de 2018 - dezembro de 2018 (1 ano)</div>
-                        <h3>Estagiário de Engenharia/TI</h3>
+                        <h3>Estagiário de Engenharia de Produto & Análise de Simulação</h3>
                         <h4>Universidade Estadual do Maranhão</h4>
                         <p>
-                            Atuei em uma função híbrida, aplicando conhecimentos de engenharia e TI. Fui responsável pela modelagem e detalhamento de projetos mecânicos utilizando softwares CAD como <strong>AutoCAD e SolidWorks</strong>. Simultaneamente, apliquei habilidades de análise de dados com <strong>Excel e Power BI</strong> para interpretar resultados de simulações e otimizar projetos.
+                            Nesta função de pesquisa e desenvolvimento, atuei como a ponte entre a Engenharia Mecânica tradicional e a Análise de Dados, utilizando a tecnologia para acelerar e validar o ciclo de design de componentes mecânicos.
+                            <br>
+                            <br>• <strong>Projeto e Modelagem 3D (CAD):</strong>
+                            <br>  - Fui responsável pela criação de modelos 3D paramétricos complexos e pela elaboração de desenhos técnicos detalhados para fabricação, seguindo as normas ABNT/ASME, utilizando <strong>SolidWorks, AutoCAD e Inventor</strong>.
+                            <br>
+                            <br>• <strong>Simulação e Análise de Dados (CAE & BI):</strong>
+                            <br>  - Executei simulações de elementos finitos (FEA) em softwares como <strong>ANSYS</strong> para analisar o comportamento estrutural de componentes sob carga, gerando grandes volumes de dados de estresse, deformação e fadiga.
+                            <br>  - Processei e analisei esses datasets de simulação com <strong>Excel e Power BI</strong>, criando dashboards interativos que permitiam à equipe de engenheiros visualizar "hotspots" de estresse e comparar o desempenho de diferentes iterações de design de forma rápida e intuitiva.
+                            <br>
+                            <br>• <strong>Impacto e Otimização:</strong>
+                            <br>  - A aplicação da análise de dados sobre os resultados das simulações permitiu a tomada de decisões de design mais rápidas e assertivas, reduzindo significativamente o número de iterações de prototipagem e o tempo de desenvolvimento do projeto.
                         </p>
                     </div>
                 </div>
@@ -297,25 +329,43 @@
                         <div class="timeline-dot"></div>
                         <div class="timeline-date">dezembro de 2022 - setembro de 2024</div>
                         <h3>Pós-graduação, Análise de Dados</h3>
-                        <h4>Descomplica</h4>
-                    </div>
-                    <div class="timeline-item" data-aos="fade-left" data-aos-delay="100">
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-date">2013 - 2019</div>
-                        <h3>Bacharelado, Engenharia Mecânica</h3>
-                        <h4>Universidade Estadual do Maranhão</h4>
+                        <h4>Descomplica Faculdade Digital</h4>
                     </div>
                     <div class="timeline-item" data-aos="fade-right" data-aos-delay="200">
                         <div class="timeline-dot"></div>
                         <div class="timeline-date">2020 - 2022</div>
                         <h3>Ensino Técnico, Informática</h3>
+                        <h4>Escola SENAI de Informática - IFMA</h4>
+                    </div>
+                    <div class="timeline-item" data-aos="fade-right" data-aos-delay="200">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-date">2020 - 2021</div>
+                        <h3>Formação, Desenvolvimento de Games</h3>
+                        <h4>Instituto Federal do Maranhão</h4>
+                    </div>
+                    <div class="timeline-item" data-aos="fade-left" data-aos-delay="100">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-date">2013 - 2019</div>
+                        <h3>Bacharelado, Engenharia Mecânica</h3>
+                        <h4>Universidade Estadual do Maranhão - UEMA</h4>
+                    </div>
+                    <div class="timeline-item" data-aos="fade-right" data-aos-delay="400">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-date">2012</div>
+                        <h3>Formação. Suporte Técnico e Manutenção de Computadores</h3>
                         <h4>Escola SENAI de Informática</h4>
                     </div>
                     <div class="timeline-item" data-aos="fade-left" data-aos-delay="300">
                         <div class="timeline-dot"></div>
                         <div class="timeline-date">janeiro de 2010 - dezembro de 2012</div>
-                        <h3>Técnico em Eletromecânica</h3>
+                        <h3>Ensino Técnico, Técnico em Eletromecânica</h3>
                         <h4>Centro de Ensino Técnico Bacelar Portela</h4>
+                    </div>
+                    <div class="timeline-item" data-aos="fade-right" data-aos-delay="600">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-date">2009 - 2010</div>
+                        <h3>Formação, Informática Intermediária/Avançada</h3>
+                        <h4>CMK Informática</h4>
                     </div>
                 </div>
                 
