--- a/portfolios/automation/index.html
+++ b/portfolios/automation/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luís Silva | Portfólio de TI e Suporte</title>
+    <title>Luís Silva | Automação de Processos</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -14,7 +14,7 @@
             <div class="profile">
                 <img src="../../assets/img/luis-silva-perfil.png" alt="Foto de Luís Silva" class="profile-photo">
                 <h1>Luís Silva</h1>
-                <p>Técnico em Informática</p>
+                <p>Automação de Processos</p>
             </div>
             <nav class="sidebar-nav">
                 <a href="https://www.linkedin.com/in/luissilvak" target="_blank">LinkedIn</a>
@@ -24,7 +24,7 @@
 
         <main class="main-content">
             <header class="main-header">
-                <h2>Portfólio de TI e Suporte</h2>
+                <h2>Portfólio de Automação de Processos</h2>
                 <p>Soluções práticas em infraestrutura, automação de rotinas, segurança e manutenção de sistemas para garantir a eficiência operacional.</p>
             </header>
 
