--- a/index.html
+++ b/index.html
@@ -374,22 +374,22 @@
                     <div class="certification-item" data-aos="zoom-in" data-aos-delay="100">
                         <i class="fas fa-certificate"></i>
                         <p>Aplicação do Power BI para Aprimoramento da Gestão</p>
-                        <span>(Instituição Emissora)</span>
+                        <span>Escola Nacional de Administração Pública - ENAP</span>
                     </div>
                     <div class="certification-item" data-aos="zoom-in" data-aos-delay="200">
                         <i class="fas fa-certificate"></i>
                         <p>Desenvolvedor de Jogos Eletrônicos</p>
-                        <span>(Instituição Emissora)</span>
+                        <span>Instituto Federal do Maranhão - IFMA</span>
                     </div>
                     <div class="certification-item" data-aos="zoom-in" data-aos-delay="300">
                         <i class="fas fa-certificate"></i>
                         <p>Suporte em TI do Google</p>
-                        <span>(Google)</span>
+                        <span>Google/Coursera</span>
                     </div>
                     <div class="certification-item" data-aos="zoom-in" data-aos-delay="400">
                         <i class="fas fa-certificate"></i>
                         <p>Tech Academy</p>
-                        <span>(Instituição Emissora)</span>
+                        <span>Startse</span>
                     </div>
                 </div>
             </div>
