--- a/portfolios/backend/index.html
+++ b/portfolios/backend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luís Silva | Portfólio de Desenvolvimento Front-End</title>
+    <title>Luís Silva | Portfólio de Desenvolvimento Back-End</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -14,7 +14,7 @@
             <div class="profile">
                 <img src="../../assets/img/luis-silva-perfil.png" alt="Foto de Luís Silva" class="profile-photo">
                 <h1>Luís Silva</h1>
-                <p>Desenvolvedor Front-End</p>
+                <p>Desenvolvedor Back-End</p>
             </div>
             <nav class="sidebar-nav">
                 <a href="https://www.linkedin.com/in/luissilvak" target="_blank">LinkedIn</a>
@@ -24,7 +24,7 @@
 
         <main class="main-content">
             <header class="main-header">
-                <h2>Portfólio de Desenvolvimento Front-End</h2>
+                <h2>Portfólio de Desenvolvimento Back-End</h2>
                 <p>Projetos focados na criação de interfaces de usuário interativas, responsivas e performáticas, utilizando tecnologias modernas como Vue.js.</p>
             </header>
 
