--- a/portfolios/analytics-engineering/index.html
+++ b/portfolios/analytics-engineering/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luís Silva | Portfólio de Engenharia Analítica</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -17,8 +19,15 @@
                 <p>Engenharia Analítica</p>
             </div>
             <nav class="sidebar-nav">
-                <a href="https://www.linkedin.com/in/luissilvak" target="_blank">LinkedIn</a>
-                <a href="https://github.com/LuiSilvak" target="_blank">GitHub</a>
+                <a href="https://www.linkedin.com/in/luissilvak" target="_blank">
+                    <i class="fab fa-linkedin"></i> LinkedIn
+                </a>
+                <a href="https://github.com/LuiSilvak" target="_blank">
+                    <i class="fab fa-github"></i> GitHub
+                </a>
+                <a href="../../assets/docs/Luis_Silva_Curriculo.pdf" target="_blank">
+                    <i class="fas fa-file-alt"></i> Currículo
+                </a> <!-- Link do Currículo -->
             </nav>
         </aside>
 
