--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Luís Silva | Desenvolvedor Full Stack & Engenheiro de Dados</title>
+    <title>Luís Silva | Analista de Dados & Desenvolvedor Full Stack</title>
 
     <meta name="description" content="Portfólio profissional de Luís Silva. Desenvolvedor Full Stack, Engenheiro de Dados, Analista de Dados e Especialista em Automação com Python, APIs e Power BI.">
     <meta name="author" content="Luís Silva">
     <meta name="keywords" content="Desenvolvedor Full Stack, Python, Django, Data Engineer, Power BI, Analista de Dados, Vue.js, Portfólio">
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Luís Silva | Desenvolvedor Full Stack & Engenheiro de Dados">
+    <meta property="og:title" content="Luís Silva | Analista de Dados & Desenvolvedor Full Stack">
     <meta property="og:description" content="Portfólio profissional com projetos em dados, automação, back-end e front-end.">
     <meta property="og:image" content="https://seusite.github.io/assets/img/preview.png">
     <meta property="og:type" content="website">
@@ -62,7 +62,7 @@
             <h1 aria-label="Nome do desenvolvedor">Luís Silva</h1>
 
             <p class="description">
-                Desenvolvedor Full Stack & Engenheiro de Dados
+                Analista de Dados & Desenvolvedor Full Stack
             </p>
 
             <p class="tagline">
@@ -387,12 +387,24 @@
                         <div class="timeline-dot"></div>
                         <div class="timeline-date">janeiro de 2010 - dezembro de 2012</div>
                         <h3>Ensino Técnico, Técnico em Eletromecânica</h3>
-                        <h4>Centro de Ensino Técnico Bacelar Portela</h4>
+                        <h4>Centro de Ensino Técnico Dr. João Bacelar Portela</h4>
+                    </div>
+                    <div class="timeline-item" data-aos="fade-right" data-aos-delay="600">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-date">2010 - 2011</div>
+                        <h3>Formação, Suporte Técnico / Montagem e Manutenção de Computadores</h3>
+                        <h4>CMK Informática</h4>
                     </div>
                     <div class="timeline-item" data-aos="fade-right" data-aos-delay="600">
                         <div class="timeline-dot"></div>
                         <div class="timeline-date">2009 - 2010</div>
-                        <h3>Formação, Informática Intermediária/Avançada</h3>
+                        <h3>Formação, Informática Intermediária / Avançada</h3>
+                        <h4>CMK Informática</h4>
+                    </div>
+                    <div class="timeline-item" data-aos="fade-right" data-aos-delay="600">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-date">2008 - 2009</div>
+                        <h3>Formação, Informática Básica</h3>
                         <h4>CMK Informática</h4>
                     </div>
                 </div>
@@ -403,6 +415,16 @@
                         <i class="fas fa-certificate"></i>
                         <p>Aplicação do Power BI para Aprimoramento da Gestão</p>
                         <span>Escola Nacional de Administração Pública - ENAP</span>
+                    </div>
+                    <div class="certification-item" data-aos="zoom-in" data-aos-delay="400">
+                        <i class="fas fa-certificate"></i>
+                        <p>Power BI</p>
+                        <span>Fundacao Sousandrade de Apoio ao Desenvolvimento da Ufma</span>
+                    </div>
+                    <div class="certification-item" data-aos="zoom-in" data-aos-delay="400">
+                        <i class="fas fa-certificate"></i>
+                        <p>Gerenciar Dados com o Microsoft 365</p>
+                        <span>ENAP</span>
                     </div>
                     <div class="certification-item" data-aos="zoom-in" data-aos-delay="200">
                         <i class="fas fa-certificate"></i>
@@ -416,8 +438,38 @@
                     </div>
                     <div class="certification-item" data-aos="zoom-in" data-aos-delay="400">
                         <i class="fas fa-certificate"></i>
+                        <p>Arquitetura de computadores</p>
+                        <span>Alura</span>
+                    </div>
+                    <div class="certification-item" data-aos="zoom-in" data-aos-delay="400">
+                        <i class="fas fa-certificate"></i>
+                        <p>Estrutura e Funcionamento das Redes de Computadores</p>
+                        <span>Google/Coursera</span>
+                    </div>
+                    <div class="certification-item" data-aos="zoom-in" data-aos-delay="400">
+                        <i class="fas fa-certificate"></i>
                         <p>Tech Academy</p>
                         <span>Startse</span>
+                    </div>
+                    <div class="certification-item" data-aos="zoom-in" data-aos-delay="400">
+                        <i class="fas fa-certificate"></i>
+                        <p>Suporte Técnico em Informática</p>
+                        <span>Escola SENAI de Informática</span>
+                    </div>
+                    <div class="certification-item" data-aos="zoom-in" data-aos-delay="400">
+                        <i class="fas fa-certificate"></i>
+                        <p>Sistemas Operacionais</p>
+                        <span>Google/Coursera</span>
+                    </div>
+                    <div class="certification-item" data-aos="zoom-in" data-aos-delay="400">
+                        <i class="fas fa-certificate"></i>
+                        <p>Administração de Sistemas e Serviços de Infraestrutura de TI</p>
+                        <span>Google/Coursera</span>
+                    </div>
+                    <div class="certification-item" data-aos="zoom-in" data-aos-delay="400">
+                        <i class="fas fa-certificate"></i>
+                        <p>Segurança de TI</p>
+                        <span>Google/Coursera</span>
                     </div>
                 </div>
             </div>
